force-app/main/default/objects/Product_Inventory__c/Product_Inventory__c.object-meta.xml
<CustomObject>
    <label>Product Inventory</label>
    <nameField>
        <displayFormat>PRInv-{000}</displayFormat>
        <label>Product Inventory No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>