force-app/main/default/objects/Product_Inventory__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IF(
    Status__c = &quot;Out of Stock&quot;,
    IMAGE(
        &quot;https://spcreation2-dev-ed--c.develop.vf.force.com/resource/1775452421000/outer?&quot;,
        &quot;Out of Stock&quot;,
        20,
        50
    ),
    IMAGE(
        &quot;https://spcreation2-dev-ed--c.develop.vf.force.com/resource/1775449714000/stampsto&quot;,
        &quot;In Stock&quot;,
        20,
        50
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>