force-app/main/default/objects/Product_Inventory__c/fields/Out_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Stock__c</fullName>
    <formula>IF(Quantity_Available__c &lt;= 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of Stock?</label>
    <type>Checkbox</type>
</CustomField>