force-app/main/default/objects/Product_Inventory__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <formula>Stock_In__c  -  Stock_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>