force-app/main/default/objects/Product_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Quantity_Available__c &lt;= 0,
    &quot;Out of Stock&quot;,
    IF(Quantity_Available__c &lt; Reorder_Level__c,
        &quot;Low Stock&quot;,
        &quot;In Stock&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>