force-app/main/default/objects/Product_Inventory__c/fields/Stock_In__c.field-meta.xml
<CustomField>
    <fullName>Stock_In__c</fullName>
    <label>Stock In</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>