force-app/main/default/objects/Product_Inventory__c/fields/Stock_Out__c.field-meta.xml
<CustomField>
    <fullName>Stock_Out__c</fullName>
    <label>Stock Out</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>