force-app/main/default/objects/Product_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Stock_In__c</columns>
    <columns>Stock_Out__c</columns>
    <columns>Quantity_Available__c</columns>
    <columns>Status__c</columns>
    <columns>Out_of_Stock__c</columns>
    <columns>Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>